# Veridikt

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  veridikt.toml
.github/workflows/: ci.yml  lint-example.yml
crates/lore_annotations/src/: lib.rs
crates/lore_annotations/tests/common/: mod.rs
crates/lore_cli/: Cargo.toml
crates/lore_cli/src/: main.rs
crates/lore_cli/src/commands/: history.rs  lint.rs  mcp.rs  project.rs
crates/lore_cli/src/packs/: builtin.rs  grammar.rs  mod.rs
crates/lore_cli/tests/: cli_mcp.rs
crates/lore_cli/tests/fixtures/mcp_project/: EVAL.md
crates/lore_cli/tests/fixtures/mcp_project/src/: payments.py
crates/lore_derive/src/: extract.rs  facts.rs  imports.rs  lib.rs  resolve.rs
crates/lore_derive/tests/: cache.rs  python.rs  typescript.rs
crates/lore_derive/tests/common/: mod.rs
crates/lore_intent/src/: lib.rs  pack.rs
crates/veridikt_annotations/: Cargo.toml  README.md
crates/veridikt_annotations/tests/common/: mod.rs
crates/veridikt_cli/: Cargo.toml  README.md
crates/veridikt_cli/src/packs/: builtin.rs
crates/veridikt_cli/tests/: conformance.rs
crates/veridikt_derive/: Cargo.toml  README.md
crates/veridikt_derive/tests/common/: mod.rs
crates/veridikt_graph/: Cargo.toml  README.md
crates/veridikt_intent/: Cargo.toml  README.md
crates/veridikt_packs/: Cargo.toml  README.md
crates/veridikt_packs/src/: lib.rs
docs/: README.md  lore-decisions.md  lore-spec.md  veridikt-decisions.md
docs/declared-intent/: README.md
docs/derived-facts/: README.md
docs/reconciliation/: README.md
packs/python/: lore-lang.toml
packs/rust/: lore-lang.toml
packs/typescript/: lore-lang.toml
