[package]
name = "veridikt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Veridikt checks whether your code comments still tell the truth — and fails CI when they drift."
readme = "README.md"
keywords = ["veridikt", "documentation", "linter", "ci", "annotations"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
veridikt_intent.workspace = true
veridikt_annotations.workspace = true
veridikt_derive.workspace = true
veridikt_graph.workspace = true
veridikt_packs.workspace = true
globset.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
# Grammar crates are dependencies of veridikt_cli ONLY (D-070d): the CLI maps a
# pack's [grammar] name to a statically linked tree-sitter handle and passes
# it to the adapters; veridikt_annotations/veridikt_derive keep them as dev-deps.
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true

[dev-dependencies]
tempfile.workspace = true

# Package/binary publish as `veridikt`; the lib keeps its name so the crate's
# own main + integration tests can keep importing `veridikt_cli::{manifest,packs}`.
[lib]
name = "veridikt_cli"
path = "src/lib.rs"

[[bin]]
name = "veridikt"
path = "src/main.rs"

[lints]
workspace = true
